--- a/HTML/Motivo1.html
+++ b/HTML/Motivo1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>MOTIVOS</title>
 </head>
 <body>
     <h1>1º Motivo</h1>
@@ -11,7 +11,7 @@
     <p>Porque eles tem uma parecia muito boa
         a ponto de dar vontade de tomar so de ver</p>
 
-        <img src="/IMG/images.png" alt="Um Chimas">
+        <img src="/IMG/CHIMAS.jpg" alt="Um Chimas">
     
     <ol start="2">
         <li>Horarios para Tomar</li>
