--- a/Motivo1.html
+++ b/Motivo1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MOTIVOS</title>
+    <title>Document</title>
 </head>
 <body>
     <h1>1º Motivo</h1>
@@ -12,8 +12,10 @@
         a ponto de dar vontade de tomar so de ver</p>
 
         <img src="/IMG/CHIMAS.jpg" alt="Um Chimas">
+
+        <h2>Curiosidades</h2>
     
-    <ol start="2">
+    <ol start="">
         <li>Horarios para Tomar</li>
         <ol>
             <li>08:00 - 09:00 Manha</li>
