--- a/Motivo1.html
+++ b/Motivo1.html
@@ -11,7 +11,7 @@
     <p>Porque eles tem uma parecia muito boa
         a ponto de dar vontade de tomar so de ver</p>
 
-        <img src="/IMG/CHIMAS.jpg" alt="Um Chimas">
+        <img src="imagem4.jpeg" alt="Um Chimas">
 
         <h2>Curiosidades</h2>
     
