--- a/Motivo2.html
+++ b/Motivo2.html
@@ -12,7 +12,7 @@
         a se manter aquecido em dias frios
     </p>
 
-    <img src="/IMG/CHIMAS.jpg" alt="Um Chimas">
+    <img src="imagem6.jpeg" alt="Um Chimas">
     
     <ol start="">
         <li>Fatos sobre chimarrão</li>
