--- a/Motivo3.html
+++ b/Motivo3.html
@@ -14,7 +14,7 @@
         <li>Foto de um Chimas</li>
         <ol>
 
-            <img src="/IMG/CHIMAS.jpg" alt="Um Chimas">
+            <img src="imagem5.jpeg" alt="Um Chimas">
             
         </ol>
     </ol>
