--- a/Motivo4.html
+++ b/Motivo4.html
@@ -10,7 +10,7 @@
     
     <p>É pratico de levar a lugares e muito facil de fazer</p>
 
-     <img src="/IMG/CHIMAS.jpg" alt="Um Chimas">
+     <img src="imagem4.jpeg" alt="Um Chimas">
 
      <h2>Curiosidades</h2>
     
