--- a/Motivo1.html
+++ b/Motivo1.html
@@ -8,7 +8,7 @@
 <body>
     <h1>1º Motivo</h1>
     
-    <p>Porque eles tem uma aparecia muito boa
+    <p>Porque eles tem uma aparencia muito boa
         a ponto de dar vontade de tomar so de ver</p>
 
         <img src="imagem4.jpeg" alt="Um Chimas">
