--- a/Motivo1.html
+++ b/Motivo1.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style1.css">
     <title>Document</title>
 </head>
 <body>
@@ -12,6 +13,7 @@
         a ponto de dar vontade de tomar so de ver</p>
 
         <img src="imagem4.jpeg" alt="Um Chimas">
+        <img src="imagem7.jpeg" alt="Um Chimas">
 
         <h2>Curiosidades</h2>
     
