--- a/Motivo2.html
+++ b/Motivo2.html
@@ -3,16 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style2.css">
     <title>Document</title>
 </head>
 <body>
     <h1> TERÇA FEIRA</h1>
     
     <p>Por ser uma bebida quente, ela te ajuda 
-        a se manter aquecido em dias frios
+        a se manter aquecido em dias frios.
     </p>
 
     <img src="imagem6.jpeg" alt="Um Chimas">
+    <img src="imagem8.jpeg" alt="Um Chimas">
+    <img src="imagem9.jpeg" alt="Um Chimas">
     
     <ol start="">
         <li>Fatos sobre chimarrão</li>
