--- a/Motivo4.html
+++ b/Motivo4.html
@@ -3,19 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style4.css">
     <title>Document</title>
 </head>
 <body>
     <h1>4° Motivo</h1>
     
-    <p>É pratico de levar a lugares e muito facil de fazer</p>
+    <p>É pratico de levar a lugares e muito facil de fazer.</p>
 
      <img src="imagem4.jpeg" alt="Um Chimas">
-
      <h2>Curiosidades</h2>
     
     <ol start="">
-    <li>Beneficos do Chimas</li>
+    <li>Beneficos do Chimas:</li>
         <ol>
             <li>Diminui o colesterol ruim</li>
             <li>Fonte de vitaminas e sais minerais</li>
