--- a/Motivo3.html
+++ b/Motivo3.html
@@ -3,23 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style3.css">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
-    <h1>3° Motivo</h1>
+    <h1 class="principal">3° Motivo</h1>
     
     <p>É uma otima bebida para tomar em uma roda de amigos!</p>
 
-    <ol start="">
-        <li>Fotos de Chimas:</li>
-        <ol>
+        <h2>Fotos de Chimas:</h2>
             <img src="imagem5.jpeg" alt="Um Chimas">
             <img src="imagem10.jpeg" alt="Um Chimas">
             <img src="imagem11.jpeg" alt="Um Chimas">
             <img src="imagem12.jpeg" alt="Um Chimas">
-        </ol>
-    </ol>
     
 </body>
 </html>
