--- a/Motivo2.html
+++ b/Motivo2.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 class="principal"> TERÇA FEIRA</h1>
+    <h1 class="principal">Motivo 2</h1>
     
     <p>Por ser uma bebida quente, ela te ajuda 
         a se manter aquecido em dias frios.
