--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
         <a href="Motivo4.html" target="_blank">Motivos para tomar um chimarrão</a>
         
     </ol>
+    <h2>INFORMAÇÕES</h2>
+    <a href="Chimas.html" target="_blank">Dados sobre chimarrão</a>
 
     <h2> COMO FAZER UM CHIMARRÃO</h2>
     <a href="https://www.tudogostoso.com.br/receita/66330-chimarrao.html" target="_blank">Como fazer um chimarrão para tomar com os amigos</a>
