--- a/Chimas.html
+++ b/Chimas.html
@@ -8,10 +8,18 @@
 </head>
 <body>
     
-<h1 id="texto_informativo">Locais mais comum para o consumo de chimarrão</h1>
+<h1 id="texto_informativo">INFORMAÇÕES SOBRE CHIMARRÃO</h1>
 
 <h2 class="titulo_informativo">Locais Mais consumidos:</h2>
-<p> </p>
+<p class="texto_escrito_informativo">  “Depois da água, é o produto mais consumido e mais lembrado no sul do Brasil.
+    E o mais consumido no Rio Grande do Sul, per capita. São, em média, 10 kg por habitante/ano”,
+    destaca o presidente do Instituto Brasileiro da Erva-Mate (Ibramate), Alberto Tomelero.
+     É muito comum ser consumido em Argentina; no Uruguai; no Paraguai;
+    em partes da Bolívia e Chile; nos estados brasileiros do Rio Grande do Sul, Santa Catarina,
+    Paraná, Mato Grosso do Sul, Mato Grosso e Rondônia.</p>
+
+    <h2 class="titulo_informativo">Origem:</h2>
+    <p></p>
     
 </body>
 </html>
