--- a/Chimas.html
+++ b/Chimas.html
@@ -11,14 +11,14 @@
 <h1 id="titulo_diferente">INFORMAÇÕES SOBRE CHIMARRÃO</h1>
 
 <h2 class="titulo_informativo">Locais Mais consumidos:</h2>
-<p class="texto_escrito_informativo">  “Depois da água, é o produto mais consumido e mais lembrado no sul do Brasil.
+<p class="texto_escrito_informativo2">  “Depois da água, é o produto mais consumido e mais lembrado no sul do Brasil.
     E o mais consumido no Rio Grande do Sul, per capita. São, em média, 10 kg por habitante/ano”,
     destaca o presidente do Instituto Brasileiro da Erva-Mate (Ibramate), Alberto Tomelero.
      É muito comum ser consumido em Argentina; no Uruguai; no Paraguai;
     em partes da Bolívia e Chile; nos estados brasileiros do Rio Grande do Sul, Santa Catarina,
     Paraná, Mato Grosso do Sul, Mato Grosso e Rondônia.</p>
 
-    <h2 class="titulo_informativo2">Origem:</h2>
+    <h2 class="titulo_informativo">Origem:</h2>
     <p class="texto_escrito_informativo">É importante mencionar que a descoberta da erva-mate pelos colonizadores espanhóis se deu nas terras de Guayrá (atual estado do Paraná). 
         Os indígenas ingeriam uma bebida feita com folhas fragmentadas e água quente, e que eram tomadas num pequeno porongo utilizando um canudo de taquara,
          em cuja base havia um trançado de fibras que impedia que as partículas das folhas passassem (LESSA, 1986).
@@ -28,14 +28,14 @@
 
     <h2 class="titulo_informativo">Curiosidades:</h2>
     
-    <p class="texto_escrito_informativo">O chimarrão chegou a ser proibido no sul do Brasil durante o século XVI,
+    <p class="texto_escrito_informativo2">O chimarrão chegou a ser proibido no sul do Brasil durante o século XVI,
          sendo considerada "erva do diabo" pelos padres jesuítas das reduções do Guairá.
          A partir do século XVII, os mesmos passaram a incentivar seu uso com o objetivo de afastar as pessoas do álcool.</p>
 
-    <p class="texto_escrito_informativo">No desenvolvimento da história do Paraná,
+    <p class="texto_escrito_informativo2">No desenvolvimento da história do Paraná,
          a Ilex Paraguariensis (erva-mate) foi responsável pelo crescimento econômico, social e político do estado.</p>
 
-    <h2 class="titulo_informativo2">Economia:</h2>
+    <h2 class="titulo_informativo">Economia:</h2>
     <P class="texto_escrito_informativo">Durante mais de um século, o mate foi para o Paraná o sustentáculo de sua economia. Eram freqüentes,
          para não dizer quase obrigatórias, as mensagens do poder executivo ao legislativo estadual amplas informações, num tom quase sempre laudatório,
          à importância do papel que ela (erva-mate) representava para a Província durante o Império e, depois, na República, para o estado.</P>
